<resources>
    <string name="app_name">TicTacToe</string>
    <string name="new_game">New Game</string>
    <string name="instructions">New text goes here</string>
    <string name="topLeftBtn">X</string>
    <string name="topMidBtn">O</string>
    <string name="topRightBtn">X</string>
    <string name="midLeftBtn">O</string>
    <string name="midBtn">X</string>
    <string name="midRightBtn">O</string>
    <string name="botLeftBtn">X</string>
    <string name="botMidBtn">O</string>
    <string name="botRightBtn">X</string>
</resources>